--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Anderson Misobuchi # Website name
-baseurl: 'https://example.com/' # Website URL
+baseurl: 'https://andersonmisobuchi.com/' # Website URL
 copyright: '© {year} Anderson Misobuchi' # Footer text, e.g. '© {year} Me'
 
 ############################
